--- a/src/css/media.css
+++ b/src/css/media.css
@@ -6,6 +6,7 @@
 ------------------------------------------------------------------------------------------------*/
 
 figure[data-ratio] > div {
+	position: relative;
 	overflow: hidden;
 
 	img, video {
